--- a/dev/index.html
+++ b/dev/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Барбершоп «Бородинский»</title>
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style-min.css">
   </head>
   <body>
     <header class="page-header">
@@ -115,10 +116,10 @@
           <input class="slider__input" type="radio" name="reviews" id="reviews-input-3">
           <div class="reviews__items">
             <blockquote class="reviews__item  slider__item">
-              <div class="reviews__auhor-foto">
+              <div class="reviews__author-foto">
                 <img src="img/pic-travis.jpg" alt="Фото Трэвиса Баркера" width="50" height="33">
               </div>
-              <cite class="reviews__auhor-name">Трэвис Баркер</cite>
+              <cite class="reviews__author-name">Трэвис Баркер</cite>
               <p>Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
             </blockquote>
             <button class="reviews__prev" type="button">Предыдущий отзыв</button>
