--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Барбершоп «Бородинский»</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style-min.css">
   </head>
   <body>
     <header class="page-header">
-      <h1 class="visually-hidden">Барбершоп «Бородинский» — истинно мужская классика</h1>
       <div class="page-header__logo">
         <img src="img/logo.svg" alt="Барбершоп «Бородинский»" width="370" height="153">
       </div>
-      <nav class="main-nav  main-nav--closed  main-nav--nojs">
+      <nav class="main-nav  main-nav--closed">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__items">
@@ -32,7 +32,6 @@
     <main>
       <section class="stats">
         <header class="stats__header">
-          <h2 class="stats__title  visually-hidden">Статистика барбершопа</h2>
           <b class="stats__slogan">Стрижка у нас<br> это выгодно!</b>
           <p class="stats__intro">Мужская стрижка требует точного подхода. Обратимся к статистике:</p>
           <small class="stats__legend stats__legend--top"><sup>*</sup> — приведенные данные ложь</small>
@@ -60,7 +59,6 @@
 
       <section class="advantages">
         <div class="advantages__wrapper slider">
-          <h2 class="advantages__title  visually-hidden">Наши преимущества</h2>
           <input class="slider__input" type="radio" name="advantages" id="advantages-input-1" checked>
           <input class="slider__input" type="radio" name="advantages" id="advantages-input-2">
           <input class="slider__input" type="radio" name="advantages" id="advantages-input-3">
