--- a/index.html
+++ b/index.html
@@ -39,20 +39,20 @@
         </header>
         <section class="stats__items">
             <div class="stats__row">
-              <p class="stats__value">1 500<sup>*</sup></p>
-              <p class="stats__field">рублей вложений</p>
+              <div class="stats__cell  stats__value">1 500<sup>*</sup></div>
+              <div class="stats__cell  stats__field">рублей вложений</div>
             </div>
             <div class="stats__row">
-              <p class="stats__value">7 200</p>
-              <p class="stats__field">секунд времени мастера</p>
+              <div class="stats__cell  stats__value">7 200</div>
+              <div class="stats__cell  stats__field">секунд времени мастера</div>
             </div>
             <div class="stats__row">
-              <p class="stats__value">90 000</p>
-              <p class="stats__field">постриженных волос</p>
+              <div class="stats__cell  stats__value">90 000</div>
+              <div class="stats__cell  stats__field">постриженных волос</div>
             </div>
             <div class="stats__row">
-              <p class="stats__value">500 000<sup>*</sup></p>
-              <p class="stats__field">лайков и комплиментов</p>
+              <div class="stats__cell  stats__value">500 000<sup>*</sup></div>
+              <div class="stats__cell  stats__field">лайков и комплиментов</div>
             </div>
         </section>
         <small class="stats__legend stats__legend--bottom"><sup>*</sup> — приведенные данные ложь</small>
