new version of styling index

--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
         <section class="stats__items">
             <div class="stats__row">
               <div class="stats__cell  stats__value">1 500<sup>*</sup></div>
-              <div class="stats__cell  stats__field">рублей вложений</div>
+              <div class="stats__cell  stats__field">рублей<br> вложений</div>
             </div>
             <div class="stats__row">
               <div class="stats__cell  stats__value">7 200</div>
-              <div class="stats__cell  stats__field">секунд времени мастера</div>
+              <div class="stats__cell  stats__field">секунд<br> времени мастера</div>
             </div>
             <div class="stats__row">
               <div class="stats__cell  stats__value">90 000</div>
-              <div class="stats__cell  stats__field">постриженных волос</div>
+              <div class="stats__cell  stats__field">постриженных<br> волос</div>
             </div>
             <div class="stats__row">
               <div class="stats__cell  stats__value">500 000<sup>*</sup></div>
-              <div class="stats__cell  stats__field">лайков и комплиментов</div>
+              <div class="stats__cell  stats__field">лайков и<br> комплиментов</div>
             </div>
         </section>
         <small class="stats__legend stats__legend--bottom"><sup>*</sup> — приведенные данные ложь</small>
@@ -121,8 +121,8 @@
               <cite class="reviews__author-name">Трэвис Баркер</cite>
               <p>Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
             </blockquote>
-            <button class="reviews__prev" type="button">Предыдущий отзыв</button>
-            <button class="reviews__next" type="button">Следующий отзыв</button>
+            <button class="reviews__btn  reviews__prev" type="button">Предыдущий отзыв</button>
+            <button class="reviews__btn  reviews__next" type="button">Следующий отзыв</button>
           </div>
           <div class="reviews__toggles  slider__toggles">
             <label class="slider__toggle" for="reviews-input-1">1</label>
@@ -136,10 +136,8 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <div class="page-footer__contacts">
-          <p>
-            <b>Барбершоп «Бородинский»</b><br>
-            г. Санкт-Петербург, ул. Большая Конюшенная 19/8<br>
-          </p>
+          <b>Барбершоп «Бородинский»</b>
+          <p>г. Санкт-Петербург, ул. Большая Конюшенная 19/8</p>
           <a href="tel:+78125556666"><span class="page-footer__contacts-hidden">Тел.:</span> +7 (812) 555-66-66</a>
         </div>
         <div class="page-footer__social">
