--- a/index.html
+++ b/index.html
@@ -171,6 +171,20 @@
         </div>
       </div>
     </footer>
+
+    <section class="modal-login">
+      <h2>Личный кабинет</h2>
+      <p>Введите свой логин и пароль, чтобы войти</p>
+      <form class="modal-login__form" action="index.html" method="post">
+        <input class="modal-login__user" type="text" name="login" placeholder="Логин">
+        <input class="modal-login__password" type="password" name="password" placeholder="Пароль">
+        <label class="modal-login__remember"><input type="checkbox" name="remember"><span class="checkbox-indicator"></span>Запомните меня</label>
+        <a class="modal-login__restore" href="">Я забыл пароль!</a>
+        <button class="modal-login__btn-enter  btn" type="submit" name="button">Войти <span class="modal-login__text-hidden">в личный кабинет<span></button>
+        <button class="modal-login__btn-closed  btn" type="button" name="button">Закрыть</button>
+      </form>
+    </section>
+
     <script src="js/script.js"></script>
   </body>
 </html>
