--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <ul class="main-nav__items">
             <li class="main-nav__item  main-nav__item--active"><a>Главная</a></li>
             <li class="main-nav__item"><a href="">Наши работы</a></li>
-            <li class="main-nav__item"><a href="">Записаться</a></li>
+            <li class="main-nav__item"><a href="form.html">Записаться</a></li>
             <li class="main-nav__item"><a href="">Контакты</a></li>
             <li class="main-nav__item"><a href="">HTML Academy</a></li>
           </ul>
@@ -175,13 +175,13 @@
     <section class="modal-login">
       <h2>Личный кабинет</h2>
       <p>Введите свой логин и пароль, чтобы войти</p>
-      <form class="modal-login__form" action="index.html" method="post">
+      <form class="form  modal-login__form" action="index.html" method="post">
         <input class="modal-login__user" type="text" name="login" placeholder="Логин">
         <input class="modal-login__password" type="password" name="password" placeholder="Пароль">
         <label class="modal-login__remember"><input type="checkbox" name="remember"><span class="checkbox-indicator"></span>Запомните меня</label>
         <a class="modal-login__restore" href="">Я забыл пароль!</a>
-        <button class="modal-login__btn-enter  btn" type="submit" name="button">Войти <span class="modal-login__text-hidden">в личный кабинет<span></button>
-        <button class="modal-login__btn-closed  btn" type="button" name="button">Закрыть</button>
+        <button class="form__btn  modal-login__enter  btn" type="submit" name="button">Войти <span class="modal-login__text-hidden">в личный кабинет<span></button>
+        <button class="modal-login__closed  btn" type="button" name="button">Закрыть</button>
       </form>
     </section>
 
