--- a/form.html
+++ b/form.html
@@ -18,8 +18,8 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__items">
             <li class="main-nav__item"><a href="index.html">Главная</a></li>
-            <li class="main-nav__item"><a href="">Наши работы</a></li>
-            <li class="main-nav__item  main-nav__item--active"><a href="">Записаться</a></li>
+            <li class="main-nav__item"><a href="work.html">Наши работы</a></li>
+            <li class="main-nav__item  main-nav__item--active"><a>Записаться</a></li>
             <li class="main-nav__item"><a href="">Контакты</a></li>
             <li class="main-nav__item"><a href="">HTML Academy</a></li>
           </ul>
