--- a/index.html
+++ b/index.html
@@ -126,17 +126,17 @@
             </blockquote>
             <blockquote class="reviews__item  reviews__item--2  slider__item">
               <div class="reviews__author-foto">
-                <img src="img/pic-travis.jpg" alt="Фото Бенджамина Харрисона" width="50" height="33">
+                <img src="img/pic-travis.jpg" alt="Фото Саши Мальцева" width="50" height="33">
               </div>
-              <cite class="reviews__author-name">Бенджамин Харрисон</cite>
-              <p>Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
+              <cite class="reviews__author-name">Саша Мальцев</cite>
+              <p>Попросил омолодить и омолодили! Кто теперь скажет, что мне 45?</p>
             </blockquote>
             <blockquote class="reviews__item  reviews__item--3  slider__item">
               <div class="reviews__author-foto">
-                <img src="img/pic-travis.jpg" alt="Фото Питера Джосефа" width="50" height="33">
+                <img src="img/pic-travis.jpg" alt="Фото Винстона Синего" width="50" height="33">
               </div>
-              <cite class="reviews__author-name">Питер Джосеф</cite>
-              <p>Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
+              <cite class="reviews__author-name">Винстон Синий</cite>
+              <p>Как только заростаю и волосы начинают мешать видеть — бегом в Бородинский!</p>
             </blockquote>
             <button class="reviews__btn  reviews__prev" type="button">Предыдущий отзыв</button>
             <button class="reviews__btn  reviews__next" type="button">Следующий отзыв</button>
