added a sign — the work of the month

--- a/work.html
+++ b/work.html
@@ -38,7 +38,12 @@
       <section class="work  inner-page__content">
         <section class="catalog">
           <div class="catalog__item  catalog__item--month">
-            <img src="" alt="Лжепётр Мчиславский" width="280" height="176">
+            <div class="catalog__item-wrapper">
+              <div class="work-month">
+                Работа месяца
+              </div>
+              <img src="" alt="Лжепётр Мчиславский" width="280" height="176">
+            </div>
             <div class="catalog__item-descr">
               <h2>Лжепётр Мчиславский</h2>
               <p>Где я только ни стригся, но так как делаете это вы — не умеет никто другой! Еще раз спасибо и до скорого!</p>
