--- a/work.html
+++ b/work.html
@@ -11,7 +11,11 @@
   <body>
     <header class="page-header  page-header--inner">
       <div class="page-header__logo  page-header__logo--inner">
-        <img src="img/logo.svg" alt="Барбершоп «Бородинский»" width="226" height="30">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/logo-desktop.png">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.png">
+          <img src="img/logo-mobile.svg" alt="Барбершоп «Бородинский»" width="226" height="30">
+        </picture>
       </div>
       <nav class="main-nav  main-nav--closed  main-nav--nojs">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -42,49 +46,65 @@
               <div class="work-month">
                 Работа месяца
               </div>
-              <img src="" alt="Лжепётр Мчиславский" width="280" height="176">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo/photo-1-desktop.jpg">
+                <source media="(min-width: 768px)" srcset="img/photo/photo-1-tablet.jpg">
+                <img src="img/photo/photo-1-mobile.jpg" alt="Лжепётр Мчиславский" width="280" height="176">
+              </picture>
             </div>
             <div class="catalog__item-descr">
               <h2>Лжепётр Мчиславский</h2>
               <p>Где я только ни стригся, но так как делаете это вы — не умеет никто другой! Еще раз спасибо и до скорого!</p>
               <div class="catalog__services">
-                <div class="catalog__services-item">Стрижка</div>
-                <div class="catalog__services-item">Бритье</div>
-                <div class="catalog__services-item">Усы</div>
+                <div class="catalog__services-item catalog__services-item--scissors">Стрижка</div>
+                <div class="catalog__services-item  catalog__services-item--beard">Бритье</div>
+                <div class="catalog__services-item  catalog__services-item--mustache">Усы</div>
               </div>
             </div>
           </div>
 
           <div class="catalog__item">
-            <img src="" alt="Саша Мальцев" width="280" height="176">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/photo/photo-2-desktop.jpg">
+              <source media="(min-width: 768px)" srcset="img/photo/photo-2-tablet.jpg">
+              <img src="img/photo/photo-2-mobile.jpg" alt="Саша Мальцев" width="280" height="176">
+            </picture>
             <div class="catalog__item-descr">
               <h2>Саша Мальцев</h2>
               <p>Попросил омолодить и омолодили! Кто теперь скажет, что мне 45?</p>
               <div class="catalog__services">
-                <div class="catalog__services-item">Стрижка</div>
+                <div class="catalog__services-item catalog__services-item--scissors">Стрижка</div>
               </div>
             </div>
           </div>
 
           <div class="catalog__item">
-            <img src="" alt="Владимир Иваныч" width="280" height="176">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/photo/photo-3-desktop.jpg">
+              <source media="(min-width: 768px)" srcset="img/photo/photo-3-tablet.jpg">
+              <img src="img/photo/photo-3-mobile.jpg" alt="Владимир Иваныч" width="280" height="176">
+            </picture>
             <div class="catalog__item-descr">
               <h2>Владимир Иваныч</h2>
               <p>К зимнему сезону — готов!</p>
               <div class="catalog__services">
-                <div class="catalog__services-item">Борода</div>
-                <div class="catalog__services-item">Усы</div>
+                <div class="catalog__services-item  catalog__services-item--beard">Борода</div>
+                <div class="catalog__services-item  catalog__services-item--mustache">Усы</div>
               </div>
             </div>
           </div>
 
           <div class="catalog__item">
-            <img src="" alt="Винстон Синий" width="280" height="176">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/photo/photo-4-desktop.jpg">
+              <source media="(min-width: 768px)" srcset="img/photo/photo-4-tablet.jpg">
+              <img src="img/photo/photo-4-mobile.jpg" alt="Винстон Синий" width="280" height="176">
+            </picture>
             <div class="catalog__item-descr">
               <h2>Винстон Синий</h2>
               <p>Как только заростаю и волосы начинают мешать видеть — бегом в Бородинский!</p>
               <div class="catalog__services">
-                <div class="catalog__services-item">Стрижка</div>
+                <div class="catalog__services-item catalog__services-item--scissors">Стрижка</div>
               </div>
             </div>
           </div>
