--- a/form.html
+++ b/form.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="utf-8">
@@ -14,7 +14,7 @@
         <picture>
           <source media="(min-width: 1200px)" srcset="img/logo-desktop.png">
           <source media="(min-width: 768px)" srcset="img/logo-tablet.png">
-          <img src="img/logo-mobile.svg" alt="Барбершоп «Бородинский»" width="226" height="30">
+          <img src="img/logo-mobile.png" alt="Барбершоп «Бородинский»" width="226" height="30">
         </picture>
       </div>
       <nav class="main-nav  main-nav--closed  main-nav--nojs">
